--- a/DriVR-Web/DriVR-Web/DriVR-Web.csproj
+++ b/DriVR-Web/DriVR-Web/DriVR-Web.csproj
@@ -5,6 +5,11 @@
     <RootNamespace>DriVR_Web</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
+  </ItemGroup>
+
 
 
 </Project>
