--- a/DriVR-Web/Data/Data.csproj
+++ b/DriVR-Web/Data/Data.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Interface\Interface.csproj" />
+  </ItemGroup>
+
 </Project>
