--- a/DriVR-Web/Logic/Logic.csproj
+++ b/DriVR-Web/Logic/Logic.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Data\Data.csproj" />
+    <ProjectReference Include="..\Interface\Interface.csproj" />
   </ItemGroup>
 
 </Project>
